fix: Center the services cards on mobile view

--- a/assets/css/components/service.scss
+++ b/assets/css/components/service.scss
@@ -6,7 +6,7 @@ $icon-size: 36px;
   border-radius: 4px;
   box-shadow: 3px 5px 55px 2px rgba(0, 0, 0, 0.05);
   padding: $space-m;
-  margin: $base-space * 1.5;
+  margin: auto;
   height: 95%;
 
   .icon-wrapper {
