--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -127,7 +127,7 @@
   border-radius: 4px;
   box-shadow: 3px 5px 55px 2px rgba(0, 0, 0, 0.05);
   padding: 1.5rem;
-  margin: 0.75rem;
+  margin: auto;
   height: 95%;
 }
 .service .icon-wrapper {
@@ -157,7 +157,6 @@
 
 .project-wrapper {
   margin: auto;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
@@ -350,7 +349,6 @@ section h2 {
 }
 
 nav {
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   padding-top: 2rem;
